@@ -1,0 +1,34 @@
+
+#include "RunAction.hh"
+
+//-----------------------------------------------------------------//
+// Constructor
+//-----------------------------------------------------------------//
+RunAction::RunAction()
+{
+  // dummy
+}
+
+//-----------------------------------------------------------------//
+// Destructor
+//-----------------------------------------------------------------//
+RunAction::~RunAction()
+{
+  // dummy
+}
+
+//-----------------------------------------------------------------//
+// Begin Run
+//-----------------------------------------------------------------//
+void RunAction::BeginOfRunAction(const G4Run* aRun)
+{
+  G4cout << "### Run " << aRun->GetRunID() << " start." << G4endl;
+}
+
+//-----------------------------------------------------------------//
+// End Run
+//-----------------------------------------------------------------//
+void RunAction::EndOfRunAction(const G4Run*)
+{
+  // dummy
+}
